--- a/settings/project.json
+++ b/settings/project.json
@@ -39,11 +39,11 @@
       false
     ]
   ],
-  "design-resolution-height": 640,
-  "design-resolution-width": 960,
+  "design-resolution-height": 1136,
+  "design-resolution-width": 640,
   "excluded-modules": [],
-  "fit-height": true,
-  "fit-width": false,
+  "fit-height": false,
+  "fit-width": true,
   "group-list": [
     "default",
     "bullet",
